# brewbot

./: .gitignore  messages.dbc  package-lock.json  requirements.txt
3D/: screw_demo.FCStd  temp-module-bot-case.stl  temp-module-top-case.stl  temp-module.FCStd  temp-module.FCStd1
arduino/heat_plate_relay/: heat_plate_relay.ino  util.h
arduino/j1939/: CMakeLists.txt
arduino/j1939/arduino/: ArduinoShim.h
arduino/j1939/src/: can.h  j1939_h.h  j1939_i.h  util.h
arduino/j1939/tests/: main_gtest.cpp
arduino/motor_relay/: motor_relay.ino  util.h
arduino/sketch_aug10a/: sketch_aug10a.ino
arduino/temp_sensor/: temp_sensor.ino  util.h
arduino/util/: util.cpp  util.h
backend/: readme.md  requirements.txt
backend/brewbot/: config.py  main.py  main2.py  util.py
backend/conf/: config.json  config.yaml  messages.dbc
brewbot/: main.py  main2.py
brewbot/ard/: api.py  ard_remote.py  buffer.py  message.py
brewbot/mock/: util.py
brewbot/rest/: config.json
frontend/: config.json  package-lock.json  package.json  readme.md
frontend/src/: AddRemoteForm.js  App.js  App.jsx  ArdApp.js  Home.js  Home.jsx  Layout.js  ListPorts.js  ListRemotes.js  Remotes.jsx  RemotesState.jsx  Root.jsx  config.json  index.js
pcb/: .gitignore  can_atmega-layout.kicad_pcb  can_atmega-layout.kicad_prl  can_atmega-layout.kicad_pro
pcb/can-atmega-02/: can-atmega-02.kicad_pcb  (+3 more)
pcb/can-atmega-02-layout/: can-atmega-02-layout.kicad_pcb  can-atmega-02-layout.kicad_prl  can-atmega-02-layout.kicad_pro  can-atmega-02-layout2.kicad_pcb  can-atmega-02-layout2.kicad_prl
(+84 files in other folders)
